--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,13 @@
     "build:static": "next build && next out"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "jwt-decode": "^3.1.2",
     "next": "^13.4.20-canary.31",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "sass": "^1.67.0"
   },
   "devDependencies": {
